[package]
name = "inputtracker"
version = "0.1.0"
authors = ["sujiuzii@gmail.com"]
description = "A simple input tracker"
edition = "2021"

[dependencies]
gtk = "0.9.2"
rdev = "0.5.3"
rodio = "0.17.3"
sysinfo = "0.30.11"

[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]